fixed loading animation + spacing

--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -149,7 +149,7 @@
 }
 
 .t-18{
-    margin-top: 276vw;
+    margin-top: 283vw;
     margin-left: 30vw;
 }
 
@@ -164,7 +164,7 @@
 }
 
 .t-21{
-    margin-top: 324vw;
+    margin-top: 327vw;
     margin-left: 60vw;
 }
 
@@ -246,7 +246,7 @@
 }
 
 .d-12{
-    margin-top: 238vw;
+    margin-top: 240vw;
     margin-left: 38vw;
 
 }
@@ -277,7 +277,7 @@
 }
 
 .d-19{
-    margin-top: 315vw;
+    margin-top: 313vw;
     margin-left: 65vw;
 }
 
@@ -344,7 +344,7 @@
 }
 
 .ar-9{
-    margin-top: 236vw;
+    margin-top: 234vw;
     margin-left: 70vw;
 }
 
@@ -359,12 +359,12 @@
 }
 
 .ar-12{
-    margin-top: 302vw;
+    margin-top: 301vw;
     margin-left: 65vw;
 }
 
 .ar-13{
-    margin-top: 323vw;
+    margin-top: 326vw;
     margin-left: 13vw;
 }
 
