--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,7 +19,7 @@ body {
 
 
 .everything{
-    animation: fadeInAnimation ease 2s;
+    animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     /* animation-fill-mode: forwards; */
 }
