--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,6 +1,6 @@
 .projects{
     position: absolute;
-    top: 195.3125vw;
+    top: 200.3125vw;
     width: 99%;
     font-family: "Roboto";
 }
